Added a Bulgarian translation for all resource strings from the implementation of the UI
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3387 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages_bg.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages_bg.properties
@@ -21,3 +21,276 @@ addContactExistError=Контактът {0} вече съществува във
 addContactIdentifier=В полето по-долу въведете идентификатора на контакта, който бихте искали да добавите.
 addContactWizard=Добавяне на контакт
 addGroupLocalError=Неуспешно добавяне на група: {0}. Проблемът е възникнал по време на входно-изходно операция.
+addGroupNetError=Неуспешно добавяне на група: {0}. Проблемът е възникнал по време на мрежова операция. Проверете мрежовите си настройки и опитайте отново.
+addGroupError=Неуспешно добавяне на група: {0}.
+addGroupErrorTitle=Грешка при добавяне на група
+addGroupExistError=Групата {0} е вече добавена към вашия списък с контакти.
+addSubcontact=&Добавяне на подконтакт
+all=&Всички
+allContacts=&Всички контаки
+alwaysOnTop=Винаги на преден план
+appearance=Външен вид
+application=Приложение
+apply=&Приложи
+at=от
+authAccepted=контакт прие вашата молба за добавяне.
+authenticationWindowTitle=Проверка на самоличността
+authRejected=контакт отказа вашата молба за добавяне.
+authorizationRequested=Молба за добавяне
+authorizationRequestedInfo=Контактът {0} поиска да ви добави.
+authenticationFailed=Неуспешна проверка на самоличността за потребител {0}, от сървър {1}. Въвели сте невалидна парола.
+authorizationResponse=Отговор на молба за добавяне
+autoPopup=Изкарай прозореца на преден план.
+awayStatus=Няма ме
+back=&Назад
+ban=&Забрана
+banFailed=Забраната се провали
+banFailedGeneralError=Неуспешен опит за забраняване на {0}. Възникна грешка на сървъра.
+banFailedNotAllowed=Неуспешен опит за забраняване на {0}. Собственикът и администратора на стаята не могат да бъдат забранявани.
+banFailedNotEnoughPermissions=Нямате нужните права за да осъществите забраната на {0}.
+brbMessage=В момента ме няма, но ще се върна скоро.
+busyMessage=Сори, зает съм в момента.
+call=Обаждане
+callVia=Обаждане през:
+callList=Списък на обажданиата
+cancel=&Отмени
+chatRoomAlreadyJoined=Вече сте влезли в стая {0}.
+chatRoomConfiguration={0} конфигуриране на стая
+chatRoomOpenConfigFailed=Грешка при изтегляне на конфигурационните данни за стая {0}.
+chatRoomOpenConfigForbidden=Грешка при изтегляне на конфигурационните данни за стая {0}. Само администраторите на стаята могат да консултират и променят нейните настройки.
+chatRoomConfigFormSubmitFailed=An error occured while trying to submit the configuration form for chat room {0}.
+chatRoomUserJoined=влезе в {0}
+chatRoomUserLeft=напусна {0}
+chatRoomUserKicked=беше изритан от {0}
+chatRoomUserQuit=напусна {0}
+chatRoomName=Име на стая
+chatRoomNameInfo=Моля въведете името на стаята която желаете да създадете.
+chatRoomNotExist=Не успях да намеря стая {0} на сървър {1}. Моля проверете дали правилно сте написали името.
+chatRoomNotConnected=Трябва да се включите към сървъра (логнете) преди да може да влезете в стая {0}.
+chatRoomNotJoined=Трябва да сте в стаята за да можете да оперирате с нея.
+chatRoomOptions=Настройки на стаята
+chatRoomRegistrationRequired=Нужно е да се регистрирате за да влезнете в стая {0}.
+chatRoomRequiresPassword=Нужна е парола за стая {0}.
+chatRooms=Стаи за разговори
+chatRoomSubjectChanged={0} смени темата на {1}
+close=&Затваряне
+closeChatAfterNewMsg=Получихте съобщение преди по-малко от 2 секунди. Сигурни ли сте, че въпреки това желаете да затворите прозореца за този разговор?
+conference=Конференция
+configure=&Настройване
+configuration=Настройки
+connectionFailed=Връзката е прекъсната
+connectionFailedMessage=Връзката към сървър {1} е прекъсната за потребител {0}.
+connectionExpiredMessage=В момента не сте свързани с {0}.
+contactAddress=Адрес на контакта
+contactNotSupportingTelephony={0} не поддържа телефонните разговори.
+contactPausedTyping={0} спря да пише
+contactTyping={0} пише съобщение
+contactTypingStateStale=статусът на писането не е обновен
+contacts=Контакти
+continue=&По-нататък
+copy=&Копирай
+copyLink=Копирай &връзка
+create=С&ъздай
+createChatRoom=&Създай стая за разговори...
+createChatRoomNotSupported=Неуспешен опит за създаване на стая: {0}. Сървър {1} не поддържа тази операция.
+createChatRoomError=Неуспешен опит за създаване на стая: {0}.
+createChatRoomWizard=Create chat room wizard
+createGroup=&Създай груп
+createGroupName=Въведете името на групата, която бихте искали да създадете.
+createFirstGroupWizard=Списъкът ви с контакти не съдържа групи. Моля добавете група от меню Файл/Добави група.
+cut=О&трежи
+date=Дата
+description=Описаня
+dial=&Набери
+dialpad=Панел за набиране
+dndStatus=Не ме безпокойте
+doNotAskAgain=Не ме питай повече
+doNotShowAgain=Повече не ми показвай това съобщение
+dontSupportWebInfo=Контактът не поддържа уеб информация
+duration=Продължителност
+edit=&Редактирай
+emptyHistory=&Изтрий историята
+enableNotifications=Включи известяваниата
+enableTypingNotifications=Включи статуса на &писане
+error=Грешка
+exit=И&зход
+extendedCriteria=Допълнителни условия
+general=Общи
+generalError=Обща грешка
+group=Група
+groupName=Име на групата
+failedToCreateChatRoom=Неуспешен опит за създаване на група: {0}.
+failedToJoinChatRoom=Неуспешен опит за влизане в стая: {0}.
+ffcStatus=Бъбри ми се
+file=&Файл
+findChatRoomError=Стаята {0} не е намерена.
+finish=&Приключи
+first=Първи
+font=Шрифт
+haveToBeConnectedToJoin=Трябва да сте свързани със сървъра преди да влезете в стаята. Свържете се и опитайте пак.
+haveToBeConnectedToLeave=Трябва да се свържете преди да напуснете стаята (парадоксално, а :) ).
+help=?
+hideCallPanel=&Скрии панела за обажданиата
+hideMainWindow=Бутонът "X" няма да прекрати програмата а само ще я скрие. Ако желаете да излезнете можете да го направите от меню Файл/Изход.
+history=&История
+historyContact=История - {0}
+hour=Час
+identifier=Ключ
+ignore=&Пренебрегни
+insertSmiley=Усмихнати човечета
+invalidCall=Невалидно обаждане
+invitation=Текст на поканата
+invitationReceived=Получена е покана
+invitationReceivedFormInfo={0} ви кани да влезете в стая {1}. Можете да приемете, откажете или да пренебрегнете тази покана.
+invite=&Покана
+inviteContactFormInfo=Моля въведете името на потребителя който бихте желали да поканите. Ако желаете можете да въведете и обяснение към поканата.
+inviteContactToChat=Покани контакт на чат
+join=&Влез
+joinAs=В&лез като
+joinChatRoom=&Влез в стая за разговори...
+joinChatRoomTitle=Влизане в стая за разговори
+joinChatRoomName=Моля, въведете името на стаята, в която желаете да влезнете.
+joinChatRoomWizard=Асистент за влизане в стая.
+kick=&Изритай
+kickFailed=Неуспешен опит за изритване
+kickFailedGeneralError=При опит за изритване на {0} възникна грешка на сървъва. Опитът е неуспешен.
+kickFailedNotAllowed=Неуспешен опит за изритване на {0}. Собствениците и администраторите на една стая не могат да бъдат изритвани.
+kickFailedNotEnoughPermissions=Нямата правата необходими за изритването на {0}.
+last=Последно
+launchBrowserError=Грешка при опит за отваряне на уеб браузър.
+launchOnStartUp=Пусни при стартиране
+leave=&Напусни
+limitReachedForIp=Имате прекалено много регистрации от текущия ви адрес и сървърт на {0} не разрешава отварянето на нови.
+login=&Включване
+loginNotSucceeded=Възникна грешка при свързване на потребител {0} със сървър: {1}.
+loginWindowTitle=Включване {0}
+logoffNotSucceeded=Възникна грешка при свързване на потребител {0} със сървър: {1}.
+me=аз
+modify=&Промени
+moveSubcontactMsg=Изберете контакта където желаете да преместите.
+moveSubcontact=Пре&мести подконтакт
+moveSubcontactInSameContact=Подконтактът вече се намира в този контакт. \n Моля изберете друг отправен контакт!
+moveToGroup=Пре&мести група
+msgDeliveryFailure=Доставката на горното съобщение се провали
+msgDeliveryOfflineNotSupported=Протоколът който използвате не позволява съобщенията към не включени потребители. Опитайте да се свържете с контакта чрез друг протокол или изчакайте да се включи.
+msgDeliveryInternalError=Възникна грешка в програмата. Това най-вероятно е бъг. Ще ви бъдем благодарни ако ни уведомите: http://www.sip-communicator.org/index.php/Development/BugsAndIssues
+msgNotDelivered=Възникна проблем с мрежовата връзка.
+msgReceived=Получихте съобщение от {0}
+msgSendConnectionProblem=Трябва да се свържете за да можете да изпращате съобщения.
+multipleLogins=Свързали сте се повече от веднъж с един и същ акаунт. Потребител {0} на сървър {1} ше бъде изключен.
+name=Име
+networkFailure=Проблем с мрежата
+next=&Напред
+new=&Нов
+newAccount=&Нов акаунт
+newMessage=Ново съобщение...
+newName=Ново име:
+newStatusMessage=Ново статус съобщение
+no=Не
+noAccountFound=За да използвате СИП Комуникатор трябва да регистрирате поне един акаунт (потребител). С този асистент ще ви помогнем да го направите.
+noAvailableRooms=Списъкът от стаи за този сървър не е наличен в момента.
+noMessage=Няма съобщение
+noMultiChatAccountAvailable=Няма акаунт който да поддържа стаи за разговор. За да разберете кои протоколи поддържат тази функционалност проверете на sip-communicator.org.
+nonEmptyChatWindowClose=Опитвате се да затворите прозорец с неизпратено съобщение, \nкоето би довело до загубата му. Сигурни ли сте?
+nonExistingUserId=Сървърът на {0} не разпознава въведения от вас потребител.
+notifications=Известявания
+ok=&ОК
+offline=Изключен
+olderCalls=Предишни обаждания
+online=Включен
+openInBrowser=Отвори в &браузър
+options=Настройки
+passwd=Парола:
+paste=&Залепи
+previous=На&зад
+print=&Печат
+protocol=Протокол
+providerNotConnected=Трябва да се свържете за да можете да комуникирате.
+quit=И&зход
+ready=Готов
+reason=Причина
+reconnectionLimitExceeded=Осъществихте няколко включвания и изключвания в прекалено кратък интервал от време. Потребител {0} е временно забранен на сървър {1} и ще трябва да изчака преди да се включи отново.
+refresh=Поднови
+registrationTimeout=Регистрацията е пресрочена:
+reject=&Отказ
+rememberPassword=Запомни паролата
+remove=&Премахни
+removeAccount=&Премахни акаунт
+removeAccountMessage=Сигурен ли сте, че искате да премахне този акаунт?
+removeContact=Премахни под&контакт
+removeGroup=Премахни &група
+rename=Пре&именувай
+renameContact=Пре&именувай контакт
+renameContactWizard=Въведете иново име за избрания контакт.
+renameGroup=Пре&именувай група
+renameGroupInfo=Въведете ново име за избраната група.
+request=&Молба
+requestAuthorization=&Молба за оторизиране
+requestAuthorizationInfo={0} не може да бъде добавен към списъка ви с контакта. {0} трябва да ви оторизира преди да бъде вкаран в списъка ви. Можля въведете молба по-долу.
+requestAuthReason=Текст към молбата
+requestAuthReasonEnter=Въведете текст към молбата
+responseAuthReasonEnter=Въведете текст към отговора
+rootGroup=Група корен
+save=&Запази
+search=&Търси
+searchForChatRooms=&Търси стаи за разговор
+searchForChatRoomsText=Използвайе бутона за да видите всички стаи от избрания сървър и с бутона Влез, изберете тази, в която искате да влезете.
+securityAuthorityRealm=Идентификация за сървър {0}.
+selectAccount=Изберете потребител
+selectAccountRegistration=Изберете един от асистентите в списъка по-долу за да можете да създадете акаунт.
+selectAccountRegWizardTitle=Изберете регистрация на акаунт 
+selectGroup=Изберете група
+selectGroupWizard=Списъкът по-долу съдържа всички групи от вашата контакт листа. Изберете тази, в която искате да добавите новия контакт.
+selectGroupWizardTitle=Изберете група
+selectProvidersForChatRoom=Списъкът по-долу съдържа всички акаунти, които поддържат разговори с повече участници. Изберете този, в който желаете да създадете нова стая.
+selectProvidersWizard=Списъкът по-долу съдържа всички регистрирани акаунти. Изберете този, който желаете да ползвате за разговори с новия контакт.
+selectProvidersWizardTitle=Изберете акаунт(и)
+send=&Изпрати
+sendFile=Изпрати &файл
+selectContactSupportingInfo=Няма информация за този контакт.
+sendMessage=&Изпрати съобщение
+sendVia=Изпрати чрез:
+setStatusMessage=Настройка на статус съобщение
+settings=&Настройки
+showCallPanel=Покажи панела за обажданията
+showChannelsList=Покажи списъка със стаите
+showOfflineUsers=Показване/Скриване на изключените потребители
+sipCommunicator=СИП Комуникатор
+specifyReason=Моля въведете причина за тази операция.
+soundOnOff=Включване/Изключване на звука
+statusChangedChatMessage=премина в статус "{0}"
+statusChangeGeneralError=Грешка при смяната на статуца за потребител {0} на сървър {1}.
+statusChangeNetworkFailure=Грешка по мрежата при смяната на статуца за потребител {0} на сървър {1}.
+statusMessageInfo=Въведете новото съобщение, което желаете да ползвате.
+subject=Тема
+summary=Обобщение
+today=Днес
+tools=&Инструменти
+typeYourRequest=Въведете молбата си тук
+uin=Номер:
+unknown=Неизвестен потребител
+useCtrlEnterToSend=Изпращане с Ctrl-&Enter
+msgDeliveryFailedUnknownError=Възникна грешка по време на изпращането на вашето съобщение.
+unregisteredMessage=Грешка при свързването. Потребителят {0} не е включен на сървър {1}.
+updateAutomatically=Автоматично инсталиране на новости.
+updates=Новости
+userInfo=&Информация за потребител
+view=&Преглед
+viewHistory=Преглед на &историята
+warning=Предупреждение
+yes=Да
+yesterday=Вчера
+
+january=Ян
+february=Фев
+march=Мар
+april=Апр
+may=Май
+june=Юни
+july=Юли
+august=Авг
+september=Сеп
+october=Окт
+november=Нов
+december=Дек
+
