Some more flexibility added to the GUI.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3423 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
+++ b/src/net/java/sip/communicator/impl/gui/i18n/messages.properties
@@ -104,6 +104,7 @@ contactNotSupportingTelephony=The choosen  {0} contact doesn't support telephony
 contactPausedTyping={0} paused typing the message
 contactTyping={0} is typing a message
 contactTypingStateStale=typing state not updated
+contactInfo=&Contact info
 contacts=Contacts
 continue=&Continue
 copy=&Copy
@@ -155,6 +156,7 @@ historyContact=History - {0}
 hour=Hour
 identifier=Identifier
 ignore=&Ignore
+info=Info
 insertSmiley=Insert smiley
 invalidCall=Invalid call
 invitation=Invitation text
@@ -276,8 +278,10 @@ setStatusMessage=Set status message
 settings=&Settings
 showCallPanel=Show call panel
 showChannelsList=Show channels list
+showOffline=Hide
 showOfflineUsers=Hide/Show offline users
 specifyReason=In the field below you could specify the reason of this operation.
+sound=Sound
 soundOnOff=Turn sound on/off
 statusChangedChatMessage=has become {0}
 statusChangeGeneralError=Failed to change status for account: User name: {0}, Server name: {1}, due to a general error.
@@ -295,7 +299,6 @@ msgDeliveryFailedUnknownError=Unknown error has occured while delivering your me
 unregisteredMessage=Unable to connect the following account: User name: {0}, Server name: {1}. You are currently offline.
 updateAutomatically=Automatically install new updates
 updates=Updates
-userInfo=&User info
 view=&View
 viewHistory=View &history
 warning=Warning
