Some chat toolbar enhancements.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3460 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -280,6 +280,7 @@ showCallPanel=Show call panel
 showChannelsList=Show channels list
 showOffline=Hide
 showOfflineUsers=Hide/Show offline users
+smiley=Smiley
 specifyReason=In the field below you could specify the reason of this operation.
 sound=Sound
 soundOnOff=Turn sound on/off
