Some enhancements in the extended tool bar.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3469 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -149,6 +149,8 @@ font=Font
 haveToBeConnectedToJoin=You have to be connected in order to join a chat room. Please connect and then try again.
 haveToBeConnectedToLeave=You have to be connected in order to leave a chat room.
 help=?
+hideOffline=Hide
+hideOfflineContacts=Hide inactive contacts
 hideCallPanel=&Hide call panel
 hideMainWindow=Clicking the X window button will not exit the application, but only hide it. If you wish to exit the application choose File/Quit.
 history=&History
@@ -278,8 +280,8 @@ setStatusMessage=Set status message
 settings=&Settings
 showCallPanel=Show call panel
 showChannelsList=Show channels list
-showOffline=Hide
-showOfflineUsers=Hide/Show offline users
+showOffline=Show
+showOfflineContacts=Show inactive contacts
 smiley=Smiley
 specifyReason=In the field below you could specify the reason of this operation.
 sound=Sound
