Fix appearing HTML tags in some warning messages.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3479 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -152,7 +152,8 @@ help=?
 hideOffline=Hide
 hideOfflineContacts=Hide inactive contacts
 hideCallPanel=&Hide call panel
-hideMainWindow=Clicking the X window button will not exit the application, but only hide it. If you wish to exit the application choose File/Quit.
+hideMainWindow=<DIV>Clicking the X window button will not exit the application, \
+but only <BR> hide it. If you wish to exit the application choose File/Quit.</DIV>
 history=&History
 historyContact=History - {0}
 hour=Hour
@@ -241,6 +242,7 @@ remove=&Remove
 removeAccount=&Remove account
 removeAccountMessage=Are you sure you want to remove this account?
 removeContact=&Remove subcontact
+removeContactText=<DIV>Are you sure you want to remove <B> {0} </B><BR>from your contact list?</DIV>
 removeGroup=&Remove group
 rename=&Rename
 renameContact=Re&name contact
