fixed German translation properties by changing encoding to UTF-8
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3488 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/systray/resources_de.properties
+++ b/resources/languages/impl/systray/resources_de.properties
@@ -19,19 +19,19 @@ messageIconMacOSX=resources/images/impl/systray/envelopeMacOSX.png
 messageIconMacOSXWhite=resources/images/impl/systray/envelopeMacOSXWhite.png
 newStatusMessageIcon=resources/images/impl/gui/common/renameDialogIcon.png
 settings=Einstellungen...
-addContact=Kontakt hinzufügen...
+addContact=Kontakt hinzufÃ¼gen...
 setStatus=Status
-close=Schließen
+close=SchlieÃŸen
 onlineStatus=Online
 offlineStatus=Offline
 messageReceived=Nachricht erhalten von
-failedToLoadAddContactDialog=Der "Kontakt hinzufügen"-Dialog konnte nicht gestartet werden.
+failedToLoadAddContactDialog=Der "Kontakt hinzufÃ¼gen"-Dialog konnte nicht gestartet werden.
 setStatusMessage=Setze Statusnachricht
 newStatusMessage=Neue Statusnachricht
-statusMessageInfo=Im Eingabefeld können Sie die neue Statusnachricht angeben.
+statusMessageInfo=Im Eingabefeld kÃ¶nnen Sie die neue Statusnachricht angeben.
 noMessage=Keine Nachricht.
 newMessage=Neue Nachricht...
-busyMessage=Ich bin gerade beschäftigt.
+busyMessage=Ich bin gerade beschÃ¤ftigt.
 brbMessage=Ich bin gerade nicht da, komme aber wieder.
 ok=&Ok
 cancel=&Abbrechen
