1. Update Checker 2. Fix of Bulgarian translation 3. Move to latest jain-sip(committed by Emil)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3514 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources_bg.properties
+++ b/resources/languages/impl/gui/resources_bg.properties
@@ -95,7 +95,7 @@ createChatRoom=&Създай стая за разговори...
 createChatRoomNotSupported=Неуспешен опит за създаване на стая: {0}. Сървър {1} не поддържа тази операция.
 createChatRoomError=Неуспешен опит за създаване на стая: {0}.
 createChatRoomWizard=Create chat room wizard
-createGroup=&Създай груп
+createGroup=&Създай групa
 createGroupName=Въведете името на групата, която бихте искали да създадете.
 createFirstGroupWizard=Списъкът ви с контакти не съдържа групи. Моля добавете група от меню Файл/Добави група.
 cut=О&трежи
