Improved authorization messages
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3517 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -97,7 +97,7 @@ conference=Conference
 configure=&Configure
 configuration=Configuration
 connectionFailed=Connection failed
-connectionFailedMessage=Connection failed for the following account: User name: {0}, Server name: {1}.
+connectionFailedMessage=Connection failed for the following account: User name: {0}, Server name: {1}. Please check your network connection or contact your network administrator for more information.
 connectionExpiredMessage=You are currently disconnected from the {0} server.
 contactAddress=Contact address
 contactNotSupportingTelephony=The choosen  {0} contact doesn't support telephony.
@@ -185,7 +185,10 @@ launchOnStartUp=Launch on start up
 leave=&Leave
 limitReachedForIp=You have too many existing registrations from the local IP address and the {0} server doesn't allow to open any more of them.
 login=&Login
-loginNotSucceeded=An error occured while logging in with the following account: User name: {0}, Server name: {1}.
+loginNetworkError=Unable to log in with account: User name: {0}, Server name: {1}, due to a network failure. Please check your network connection.
+loginGeneralError=An error occured while logging in with account: User name: {0}, Server name: {1}.
+loginInternalError=An error occured while logging in with account: User name: {0}, Server name: {1}. This is most probably an internal application error. You could report your problem to issues@sip-communicator.dev.java.net.
+loginInvalidPropsError=Unable to log in with account: User name: {0}, Server name: {1}, due to an account configuration problem. Please check your account configuration.
 loginWindowTitle=Login {0}
 logoffNotSucceeded=An error occured while logging off with the following account: User name: {0}, Server name: {1}.
 me=me
