Added missing string resource.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3519 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/plugin/sipaccregwizz/resources.properties
+++ b/resources/languages/plugin/sipaccregwizz/resources.properties
@@ -19,3 +19,4 @@ forceP2PPresence=Force peer-to-peer presence mode
 offlineContactPollingPeriod=Offline contacts polling period (in s.)
 subscriptionExpiration=Default subscription duration (in s.)
 presenceOptions=Presence Options
+error=Error
