"Remove contact" text - french translation by Julien.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3524 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources_fr.properties
+++ b/resources/languages/impl/gui/resources_fr.properties
@@ -237,6 +237,7 @@ remove=&Supprimer
 removeAccount=&Supprimer le compte
 removeAccountMessage=Etes-vous certain de vouloir supprimer ce compte ?
 removeContact=&Supprimer le sous-contact
+removeContactText=<DIV>Etes-vous certain de vouloir supprimer <b> {0} </b><br>de votre liste de contact?</DIV>
 removeGroup=&Supprimer le groupe
 rename=&Renommer
 renameContact=Re&nnomer le contact
