update of the German language resources
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3529 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources_de.properties
+++ b/resources/languages/impl/gui/resources_de.properties
@@ -84,6 +84,7 @@ contactNotSupportingTelephony=Der gewählte {0} Kontakt unterstützt keine Telef
 contactPausedTyping={0} unterbricht das Tippen
 contactTyping={0} tippt eine Nachricht
 contactTypingStateStale=Tipp-Information nicht aktuell
+contactInfo=&Kontaktinformation
 contacts=Kontakte
 continue=&Weiter
 copy=&Kopieren
@@ -103,7 +104,7 @@ dial=&Wähle
 dialpad=Wähltastatur
 dndStatus=Bitte nicht stören.
 doNotAskAgain=Nicht mehr fragen
-dontSupportWebInfo=Dieser Kontakt unterstützt keine Web-Kontakt-Information
+doNotShowAgain=Diese Nachricht nicht mehr anzeigen.
 dontSupportWebInfo=Dieser Kontakt unterstützt keine Web-Information
 duration=Dauer
 edit=&Ändern
@@ -128,6 +129,8 @@ font=Schriftart
 haveToBeConnectedToJoin=Sie müssen verbunden sein, um einer Gesprächsrunde beizutreten. Bitte verbinden Sie sich und versuchen Sie es erneut.
 haveToBeConnectedToLeave=Sie müssen verbunden sein, um eine Gesprächsrunde zu verlassen. 
 help=?
+hideOffline=Ausblenden
+hideOfflineContacts=Inaktive Kontakte ausblenden
 hideCallPanel=&Verstecke Wähltastatur
 hideMainWindow=Ein Klick auf das X schließt die Applikation nicht, sondern minimiert sie nur. Wenn Sie beenden wollen, wählen Sie Datei/Beenden aus dem Menü.
 history=&Protokoll
@@ -135,6 +138,7 @@ historyContact=Protokoll - {0}
 hour=Stunde
 identifier=Identifier
 ignore=&Ignorieren
+info=Info
 insertSmiley=Smiley einfügen
 invalidCall=Ungültiger Anruf
 invitation=Einladungstext
@@ -161,6 +165,9 @@ leave=&Verlassen
 limitReachedForIp=Sie haben schon zu viele Verbindungen von Ihrer IP-Addresse und der Server {0} erlaubt keine weiteren.
 login=&Anmelden
 loginNotSucceeded=Bei der Anmeldung mit dem Konto {0} am Server {1} ist ein Fehler aufgetreten.
+loginGeneralError=Ein Fehler ist beim Anmelden aufgetreten: User name: {0}, Server name: {1}.
+loginInternalError=Ein Fehler ist beim Anmelden aufgetreten: User name: {0}, Server name: {1}. Dies ist wahrscheinlich ein Fehler in der Anwendung. Bitte senden Sie diesen Fehler an issues@sip-communicator.dev.java.net.
+loginInvalidPropsError=Ein Fehler ist beim Anmelden aufgetreten: User name: {0}, Server name: {1}. Es ist ein Konfigurationsfehler aufgetreten, überprüfen Sie bitte Ihre Einstellungen.
 loginWindowTitle=Anmelden {0}
 logoffNotSucceeded=Bei der Abmeldung mit dem Konto {0} vom Server {1} ist ein Fehler aufgetreten.
 me=mich
@@ -217,6 +224,7 @@ remove=&Löschen
 removeAccount=&Konto löschen
 removeAccountMessage=Sind Sie sicher, dass Sie den Kontakt löschen wollen?
 removeContact=&Lösche Kontakt
+removeContactText=<DIV>Sind Sie sicher, dass Sie <B> {0} </B><BR>entfernen wollen?</DIV>
 removeGroup=&Lösche Gruppe
 rename=&Umbenennen
 renameContact=Kontakt umbenennen
@@ -248,6 +256,9 @@ send=&Senden
 sendFile=Datei S&enden
 selectContactSupportingInfo=Für diesen Kontakt ist keine Information verfügbar
 sendMessage=Nachricht &Senden
+sendAsSms=SMS Versenden
+sendSms=SMS vers&enden
+sendSmsNotSupported=Das ausgewählte Protokoll unterstützt den Versand vom SMS nicht.
 sendVia=Senden via
 setStatusMessage=Statusinformation setzen
 settings=&Einstellungen
@@ -255,6 +266,9 @@ showCallPanel=Zeige Telefonfeld
 showChannelsList=Zeige Kanalliste
 showOfflineUsers=Verstecke/Zeige Benutzer, die offline sind.
 specifyReason=Geben Sie den Grund für diese Operation ein.
+smiley=Smiley
+specifyReason=In diesem Feld können Sie eine Begründung für die Aktion eingeben.
+sound=Ton
 soundOnOff=Ton ein/aus
 statusChangedChatMessage=ist nun {0}
 statusChangeGeneralError=Konnte Status nicht ändern. Benutzername: {0}, Servername: {1}. Ein allgemeiner Fehler ist aufgetreten.
@@ -272,7 +286,6 @@ msgDeliveryFailedUnknownError=Unbekannter Fehler beim Zustellen der Nachricht.
 unregisteredMessage=Fehler beim Verbinden über das folgende Konto: Benutzername: {0}, Servername: {1}. Sie sind nicht verbunden.
 updateAutomatically=Installiere Updates automatisch
 updates=Updates
-userInfo=&Benutzerinformation
 view=&Ansicht
 viewHistory=Zeige &Verlauf/Geschichte
 warning=Warnung
