- setEditableUserName, isEditableUserName methods added to enable protocols to specify if the user name is editable through login. - Fix client behavior when logging with wrong password or when trying to log in and there's no network connection. Enhancements of the Login window.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3532 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -56,7 +56,7 @@ authenticationWindowTitle=Authentication requested
 authRejected=contact has rejected your authorization request.
 authorizationRequested=Authorization requested
 authorizationRequestedInfo=The {0} contact requests your authorization.
-authenticationFailed=The authentication failed for the following account: User name: {0}, Server name: {1}. The password you entered is not valid.
+authenticationFailed=Authentication failed. The password you entered is not valid.
 authorizationResponse=Authorization response
 autoPopup=Bring window to front
 awayStatus=Away
