UpdateCheck now look for last version from properties file located on download site
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3541 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/plugin/updatechecker/resources.properties
+++ b/resources/languages/plugin/updatechecker/resources.properties
@@ -1,2 +1,3 @@
 dialogTitle=New version available
-dialogMessage=<html>There is new version of {0} <br>you can download it at : <br>
+dialogMessage1=<html>There is new version of {0} !
+dialogMessage2=<br>You can download it at : <br>
