UpdateCheck for every installer
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3547 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/plugin/updatechecker/resources.properties
+++ b/resources/languages/plugin/updatechecker/resources.properties
@@ -1,3 +1,7 @@
 dialogTitle=New version available
-dialogMessage1=<html>There is new version of {0} !
-dialogMessage2=<br>You can download it at : <br>
+dialogMessage1=<html>A new version of {0} is available for download.
+dialogMessage2=<br>{0} ({1}): <br>
+dialogMessageDebian=
+buttonDownload=Download
+buttonClose=Close
+
