Keep alive configurations added to the SIP account registration wizard.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3559 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/plugin/sipaccregwizz/resources.properties
+++ b/resources/languages/plugin/sipaccregwizz/resources.properties
@@ -3,7 +3,7 @@ protocolDescription=The SIP protocol
 uin=SIP id
 password=Password
 rememberPassword=Remember password
-uinAndPassword=ID and Password
+uinAndPassword=User name and password
 advancedOptions=Advanced Options
 ovverideServerOps=Override server default options
 registrar=Registrar
@@ -20,3 +20,10 @@ offlineContactPollingPeriod=Offline contacts polling period (in s.)
 subscriptionExpiration=Default subscription duration (in s.)
 presenceOptions=Presence Options
 error=Error
+summary=Summary
+keepAlive=Keep alive
+keepAliveMethod=Keep alive method
+keepAliveInterval=Keep alive interval
+keepAliveIntervalEx=Decimal between 1 and 3600
+register=REGISTER
+options=OPTIONS
